fix mb gallery on mobile

--- a/ecommerce/styles/Gallery.module.css
+++ b/ecommerce/styles/Gallery.module.css
@@ -1,5 +1,5 @@
 .mx20 {
-  margin: 10px 20px;
+  margin: 0 20px;
 }
 
 .title {
@@ -43,6 +43,6 @@
 
   @media screen and (max-width: 768px) {
     .list {
-      margin-bottom: 0px;
+      margin-bottom: 30px;
     }
   }
